updated package.json homepage

--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,14 @@ button:hover {
 }
 
 .link-to-calendar {
-  color: var(--text-color);
+  color: var(--background-color);
   text-decoration: none;
+}
+
+.NumberOfEvents {
+  margin-bottom: 20px;
+}
+
+.event-list {
+  margin-top: 20px;
 }
