--- a/src/App.css
+++ b/src/App.css
@@ -170,3 +170,11 @@ button:hover {
 .event-list {
   margin-top: 20px;
 }
+
+.alerts-container {
+  position: fixed;
+  top: 0px;
+  left: 20px;
+  width: 250px;
+  z-index: 1000;
+ }
