--- a/src/App.css
+++ b/src/App.css
@@ -43,27 +43,40 @@ p {
   margin: 5px 0;
 }
 
+.search-bars {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 60%;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  gap: 12px;
+}
+
 input[type="text"],
 input[type="number"] {
-  padding: 10px 8px;
-  border-radius: 4px;
+  padding: 8px 6px 8px 10px;
+  border-radius: 12px;
   outline: none;
   border: 1px solid var(--border-color);
   background-color: var(--background-color);
-  font-size: 16px;
-  line-height: 22px;
-  height: 40px;
-  margin-bottom: 20px;
+  color: var(--text-color);
+  opacity: 0.9;
+  font-size: 14px;
+  line-height: 20px;
+  align-self: center;
+  height: 38px;
 }
 
 .input-field {
-  width: 300px;
-  margin-top: 5px;
+  width: 250px;
+  margin-top: 6px;
+  margin-bottom: 20px;
 }
 
-.label-number-field {
-  font-style: italic;
-  color: var(--text-color);
+label {
+  text-transform: uppercase;
+  font-size: 15px;
+  color: var(--color4);
 }
 
 #city-search {
@@ -73,21 +86,36 @@ input[type="number"] {
   position: relative;
 }
 
+#number-of-events {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  position: relative;
+}
+
+
 .suggestions {
-  width: 300px;
+  width: 250px;
   position: absolute;
   top: 45px;
   z-index: 2;
-  font-size: 16px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
+  align-self: center;
+  margin: 0;
+  margin-top: 10px;
+  font-size: 14px;
+  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
 }
 
 .suggestions > li {
   text-align: left;
-  padding: 10px;
+  padding: 8px 6px 8px 10px;
   background-color: var(--background-color);
   color: var(--text-color);
   cursor: pointer;
+}
+.suggestions > li:last-child {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .suggestions > li:hover {
@@ -115,15 +143,18 @@ h2 {
   border: 2px solid var(--border-color-dark);
   background-color: rgba(245, 245, 220, 0.9); /* Semi-transparent Beige */
   color: var(--text-color);
-  padding: 25px;
-  margin-bottom: 15px;
+  padding: 20px 20px;
+  margin-top: 10px;
+  margin-bottom: 12px;
   text-align: center;
-  border-radius: 4px;
-  width: 75%;
+  font-weight: 400;
+  border-radius: 32px;
+  position: relative;
 }
 
 .event-details {
   margin-top: 20px;
+  width: 60%;
 }
 
 button {
@@ -136,6 +167,7 @@ button {
   background-color: var(--color3);
   color: #3e2723; /* Dark Sienna */
   cursor: pointer;
+  opacity: 0.8;
   transition: all 0.3s;
 }
 
@@ -178,3 +210,58 @@ button:hover {
   width: 250px;
   z-index: 1000;
  }
+ .charts-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 50px;
+}
+
+.scatter-chart {
+  width: 80%;
+  margin-left: 0;
+}
+
+.back-to-top {
+  position: fixed;
+  left: 80%;
+  bottom: 10px;
+  padding: 10px 20px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  border: none;
+  cursor: pointer;
+}
+@media (max-width: 1400px) {
+  #event-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 1024px) {
+  #event-list {
+    grid-template-columns: 1fr;
+  }
+}
+
+  @media (max-width: 768px) {
+  .search-bars {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+  .charts-container {
+    grid-template-columns: 1fr;
+  }
+  .event {
+    width: 90%;
+  }
+  .event-details {
+    width: 90%;
+  }
+  .scatter-chart {
+    width: 100%;
+    margin-top: 50px;
+  }
+  h2 {
+    font-size: 33px;
+  }
+}
